--- a/package.json
+++ b/package.json
@@ -63,15 +63,15 @@
     "@types/vscode": "^1.48.0",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
+    "@vscode/test-web": "^0.0.11",
     "eslint": "^7.9.0",
     "glob": "^7.1.6",
-    "mocha": "^8.1.3",
+    "mocha": "^10.2.0",
+    "ts-loader": "^9.2.2",
     "typescript": "^4.0.2",
     "vscode-test": "^1.4.0",
-    "ts-loader": "^9.2.2",
     "webpack": "^5.38.1",
-    "webpack-cli": "^4.7.0",
-    "@vscode/test-web": "^0.0.11"
+    "webpack-cli": "^4.7.0"
   },
   "contributes": {
     "commands": [
